--- a/client/src/pages/buyCurrency/buyCurrency.module.scss
+++ b/client/src/pages/buyCurrency/buyCurrency.module.scss
@@ -1,14 +1,33 @@
 .buyCurrencyMain {
   width: 100%;
-  height: 100vh;
 }
 
-@media (min-width: 692px) {
+.graphic {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.graphicCurrency {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 420px;
+  height: 420px;
+}
+
+@media (min-width: 768px) {
   .desktopCurrencyWallet {
     width: 100%;
-    height: 100%;
+    height: 90vh;
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+
+  .graphicCurrency {
+    width: 700px;
+    height: 700px;
   }
 }
